# Firmware_cpp

./: .bashrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  partitions.csv  sdkconfig  sdkconfig.old
components/esp_filesystem/: esp_filesystem.cpp
components/esp_filesystem/include/: esp_filesystem.hpp
components/esp_serial/: CMakeLists.txt  esp_serial.cpp
components/esp_serial/include/: esp_serial.hpp
components/esp_serial/test/: test_serial_rs485.hpp
components/esp_socket/: CMakeLists.txt  socket_client_tcp.cpp  socket_server_tcp.cpp  socket_tcp.cpp
components/esp_socket/include/: socket_client_tcp.hpp  socket_server_tcp.hpp  socket_tcp.hpp
components/esp_test/: CMakeLists.txt  esp_generic_test.cpp  esp_test.cpp
components/esp_test/include/: esp_test.hpp
components/esp_wifi_driver/: esp_wifi_driver.cpp
components/esp_wifi_driver/proto/: wifi.proto
components/firmware_update/: firmware_update.cpp
components/http_server_backend/: CMakeLists.txt  http_server.cpp
components/modbus_gateway/: CMakeLists.txt  modbus_gateway.cpp
components/stepper_diver/: stepper_timer.cpp
components/ws_log/: ws_log.cpp
data/: 207.js  config.html  config.js  config.json  index.html  index.js
main/: CMakeLists.txt  app_info.cpp  app_info.hpp  http_handlers.cpp  http_handlers.hpp  main.cpp  mdb_relay_io.c  mdb_relay_io.h
main/test/: test.cpp  test.hpp
page/: config.js  config.json  default.json  index.js
page/panels/: ChannelPanel.js  MainPanel.js
proto/: main.proto
script/: update_firmware.py  ws_log.py
(+4 files in other folders)
